@@ -315,9 +315,17 @@ interface_start(char* cmd, engineconfig_type* config)
         sizeof(servaddr));
     if (ret != 0) {
         if (cmd && ods_strcmp(cmd, "start\n") == 0) {
-            (void) snprintf(start_cmd, "%s -c %s", ODS_SE_ENGINE,
-                config->cfg_filename);
-            return system(start_cmd);
+            if ((strlen(ODS_SE_ENGINE) + strlen(config->cfg_filename) + 5)
+                < 256) {
+                (void) snprintf(start_cmd, "%s -c %s", ODS_SE_ENGINE,
+                    config->cfg_filename);
+                close(sockfd);
+                return system(start_cmd);
+            } else {
+                fprintf(stderr, "Unable to start engine: cmd too long\n");
+                close(sockfd);
+                return 1;
+            }
         }
 
         if (cmd && ods_strcmp(cmd, "running\n") == 0) {
